--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </a>
                 <div class="timeline-dates">
                   <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' voranmelden.">Nov 29 | Voranmelden</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' voranmelden.">DE | Nov 29 | Voranmelden</a>
                 </div>
               </div>
             </li>
@@ -226,7 +226,7 @@
                 </a>
                 <div class="timeline-dates">
                   <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Preregister</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>
                 </div>
               </div>
             </li>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="timeline-dates">
                   <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'Statistics with R'.">tba | Voranmelden</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 13/14 | Voranmelden</a>
                 </div>
               </div>
             </li>
@@ -278,7 +278,7 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Anmelden</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>
                 </div>
               </div>
             </li>
@@ -815,7 +815,7 @@
                 <h4  style="padding:0px;margin:0px">Einfürung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science von Grund auf</p>
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Anmelden</a><br>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' voranmelden.">Nov 29 | Voranmelden</a>
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' voranmelden.">DE | Nov 29 | Voranmelden</a>
                 <br><br>
                 <p class="head">Beschreibung</p>
                 <p class="text-muted entry">Daten sind das Gold des 21. Jahrhunderts. Wer Zugang zu Daten hat und sie zu nutzen weiss, kann beispielsweise den wissenschaftlichen und technologischen Fortschritt im Gesundheitswesen vorantreiben oder sich durch intelligentes Marketing kritische Wettbewerbsvorteile sichern. Egal welches Ziel das Ihre ist, ob Sie im Management oder in der Entwicklung arbeiten, Expertise im Bereich der modernen Datenanalyse wird zunehmend zum entscheidenden Faktor. Dieser Nachmittagskurs ermöglicht Ihnen den Einstieg in die Welt von Data Science und Big Data mittels der offenen Programmiersprache R, welche speziell für den Zweck der Datenanalyse entwickelt wurde und neben Python zu den gefragtesten Tools in diesem Bereich zählt. Sie lernen die Grundlagen der Sprache und werden in interaktiven Elementen an die eigenständige Umsetzung herangeführt. Abschliessend erfahren Sie wie Sie ihre Reise in die Welt der modernen Datenanalyse fortsetzen können.</p>
@@ -823,6 +823,10 @@
                 <p class="text-muted entry">Die Teilnahme an diesem Kurses benötigt keinerlei Vorkenntnisse. Teilnehmende sind gebeten, einen eigenen Laptop mitzubringen.</p>
                 <p class="head">Details</p>
                 <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem">Kurssprache</td>
+                    <td>Deutsch</td>
+                  </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
                     <td>Zweitageskurs: Fr-Sa, 9.00-18.00 Uhr</td>
@@ -929,7 +933,7 @@
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science mit R von Grund auf</p>
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Anmelden</a>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">Feb 14/15 | Voranmelden</a>
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>
                 <br><br>
                 <p class="head">Beschreibung</p>
                 <p class="text-muted entry">Jedes datengestützte Projekt beginnt mit der Datenaufbereitung und -exploration. Dieser ebenso aufwendige wie bedeutende Projektabschnitt, denn alle folgenden hängen von ihm ab, umfasst das Bereinigen und Verknüpfen von Datensätzen aus verschiedenen Quellen und die Visualisierung der darin enthaltenen Zusammenhänge. Kaum ein Werkzeug eignet sich für diese Aufgaben wie die Programmiersprache R. An diesem vollgepackten Wochenende lernen Sie, wie sie alle Elemente der Datenaufbereitung und -exploration mit R durchführen können. Unter anderem lernen Sie wie sie Daten von der Festplatte oder aus dem Internet laden, wie sie Daten bereinigen und organisieren, wie sie einfache deskriptive Analysen durchführen und, nicht zuletzt, wie sie ästhetisch ansprechende, publikationsreife Visualisierungen erstellen.</p>
@@ -937,6 +941,10 @@
                 <p class="text-muted entry">Teilnehmende dieses Kurses sollten über Grundkenntnisse in der Programmiersprache R verfügen. Für Interessierte ohne oder mit unzureichender Erfahrung in R empfehlen wir den Nachmittagskurs <i>Einführung in die moderne Datenanalyse mit R</i> zu besuchen. Wenn Sie nicht sicher sind, ob Sie über genügend Grundkenntnisse verfügen setzen Sie sich entweder direkt mit uns in Verbindung oder nehmen Sie zunächst am diesem <a href="http://bit.ly/weissichgenug%C3%BCberR"><b>QUIZ</b></a> teil. Kursteilnehmende sind gebeten, einen eigenen Laptop mit Software-Installationsrechten mitzubringen.</p>
                 <p class="head">Details</p>
                 <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem">Kurssprache</td>
+                    <td>Deutsch</td>
+                  </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
                     <td>Zweitageskurs: Fr-Sa, 9.00-18.00 Uhr</td>
@@ -1043,7 +1051,7 @@
                 <p class="item-intro text-muted">Treffen Sie datenbasierte Entscheidungen mit R</p>
 
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Anmelden</a>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">Mär 13/14 | Voranmelden</a>
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 13/14 | Voranmelden</a>
 
                 <br><br>
 
@@ -1055,6 +1063,10 @@
 
                 <p class="head">Details</p>
                 <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem">Kurssprache</td>
+                    <td>Deutsch</td>
+                  </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
                     <td>Zweitageskurs: Fr-Sa, 09.00-18.00 Uhr</td>
@@ -1167,7 +1179,7 @@
                 <p class="item-intro text-muted">Lernen Sie prädiktive Algorithmen mit R zu erstellen.</p>
 
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Anmelden</a>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">Apr 3/4 | Voranmelden</a>
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>
 
                 <br><br>
 
@@ -1179,6 +1191,10 @@
 
                 <p class="head">Details</p>
                 <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem">Kurssprache</td>
+                    <td>Deutsch</td>
+                  </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
                     <td>Zweitageskurs: Fr-Sa, 09.00-18.00 Uhr</td>
