--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <h3 class="section-subheading text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Feel to contact us, if you have questions, and explore our open materials.</h3>
           --->
           <p class="text-muted" style="margin:0px;font-size:1.5em">Für Anfänger und Fortgeschrittene!</i></p>
-          <p class="text-muted">Unsere Kurse balancieren kurze, interaktive Präsentationen und längere, Schritt-für-Schritt Übungen. Dabei stimmen wir unsere Kurse auf Ihr spezifisches Niveau und Ihre Bedürfnisse ab, egal ob Sie Anfänger oder Fortgeschrittener sind. Es sind jeweils mehrere Instruktoren vor Ort, um sicherzustellen, dass alle Teilnehmer den Kursinhalten folgen können. Bitte kontaktieren Sie uns, wenn Sie Fragen haben, und erkunden Sie unsere offenen Materialien.
+          <p class="text-muted">Unsere Kurse balancieren kurze, interaktive Präsentationen und längere, Schritt-für-Schritt Übungen. Dabei stimmen wir unsere Kurse auf Ihr spezifisches Niveau und Ihre Bedürfnisse ab, egal ob Sie Anfänger oder Fortgeschrittener sind. Es sind jeweils mehrere Instruktoren vor Ort, um sicherzustellen, dass alle Teilnehmenden den Kursinhalten folgen können. Bitte kontaktieren Sie uns, wenn Sie Fragen haben, und erkunden Sie unsere offenen Materialien.
 
           </p><br><br><br>
 
