--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                   </div>
                 </div>
                 <div class="mats" style="margin-top:-7px; > <!--- text-shadow: 0px 0px 20px #82E5BF"--->
-                  Offenen Materialien erkunden
+                  Offene Materialien erkunden
                 </div>
                 </a>
               </div>
