--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                   </tr>
                   <tr>
                     <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=graphics">graphics</a></td>
-                    <td>Rs Standard für Paket (nicht zu verwechseln mit <a class="pckg" target="_blank" href="http://cran.r-project.org/package=ggplot2">ggplot2</a>).</td>
+                    <td>Rs Standard für Visualisierungen (nicht zu verwechseln mit <a class="pckg" target="_blank" href="http://cran.r-project.org/package=ggplot2">ggplot2</a>).</td>
                   </tr>
                 </table>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
