--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
                   </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
-                    <td>Zweitageskurs: Fr-Sa, 9.00-18.00 Uhr</td>
+                    <td>Eintageskurs: Fr, 13.00-18.00 Uhr</td>
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
@@ -961,7 +961,7 @@
                 </table>
                 <p class="head">Aufbau</p>
                 <p class="text-muted entry">Der Kurs findet an beiden Kurstagen von 9:00 bis 18:00 Uhr statt. An beiden Tagen dienen Kurzvorträge und Beispiele zur Einführung in die einzelnen Themen. Der Grossteil der Zeit wird anschliessend praktischen Übungen gewidmet, die Ihnen "learning by doing" ermöglichen sollen. Mit mindestens 2 Anleitern vor Ort wird es ausreichend Zeit für eine 1:1 Betreuung während der Übungen geben. Alle Kursmaterialien, Tutorials, Beispiele, Übungen und Lösungen stehen Ihnen während und nach dem Kurs jederzeit online zur Verfügung. Sie finden unsere Materialien zu vergangenen Kursen unter <a href="https://therbootcamp.github.io/#materials">offene Materialien erkunden</a>.</p>
-                <p class="head">Programm & Materialien <font style="font-size:10px">(Feb, 2019)</font></p>
+                <p class="head">Programm & Materialien <font style="font-size:12px"> (Feb, 2019, Änderungen vorbehalten)</font></p>
                 <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
                   <tr>
                     <th></th>
@@ -976,7 +976,7 @@
                   <tr>
                     <td class="time">0930</td>
                     <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/IntroToR/IntroToR.html">Einführung in R</a></td>
-                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Analysing/Analysing.html">Analysing</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Analysing/Analysing_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Analysing/Analysing.html">Analyse</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Analysing/Analysing_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1200</td>
@@ -985,13 +985,13 @@
                   </tr>
                   <tr>
                     <td class="time">1300</td>
-                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Wrangling/Wrangling.html">Data</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Data/Data_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Plotting/Plotting.html">Plotting</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Wrangling/Wrangling_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Wrangling/Wrangling.html">Daten</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Data/Data_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Plotting/Plotting.html">Visualisierung</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Wrangling/Wrangling_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1530</td>
                     <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Wrangling/Wrangling.html">Wrangling</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Plotting/Plotting_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/CaseStudies.html">Case studies</a>: <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/Clinical_Data_Case_Study.html">I</a>, <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/Financial_Data_Case_Study.html">II</a></td>
+                    <td><a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/CaseStudies.html">Fallstudien</a>: <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/Clinical_Data_Case_Study.html">I</a>, <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/Financial_Data_Case_Study.html">II</a></td>
                   </tr>
                   <tr>
                     <td class="time">1745</td>
@@ -1085,7 +1085,7 @@
                 <p class="head">Aufbau</p>
                 <p class="text-muted entry">Der Kurs findet an beiden Kurstagen von 9:00 bis 18:00 Uhr. An beiden Tagen dienen Kurzvorträge und Beispiele zur Einführung in die einzelnen Themen. Der Großteil der Zeit wird anschliessend praktischen Übungen gewidmet, die Ihnen "learning by doing" ermöglichen sollen. Mit mindestens 2 Anleitern vor Ort wird es ausreichend Zeit für eine 1:1 Betreuung während der Übungen geben. Alle Kursmaterialien, Tutorials, Beispiele, Übungen und Lösungen stehen Ihnen während und nach dem Kurs jederzeit online zur Verfügung. Sie finden unsere Materialien zu vergangenen Kursen unter <a href="https://therbootcamp.github.io/#materials">offene Materialien erkunden</a>. </p>
 
-                <p class="head">Programm & Materialien <font style="font-size:10px">(Apr, 2019)</font></p>
+                <p class="head">Programm & Materialien <font style="font-size:12px"> (Apr, 2019, Änderungen vorbehalten)</font></p>
                 <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
                   <tr>
                     <th></th>
@@ -1099,8 +1099,8 @@
                   </tr>
                   <tr>
                     <td class="time">0930</td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/Intro2Stats/Intro2Stats.html">Intro to R</a> &<br><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/RforStats/RforStats.html">R for Stats</a></td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/MixedModels/MixedModels.html">Hierarchical models</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Analysing/Analysing_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/Intro2Stats/Intro2Stats.html">Einführung in Statistik</a> </td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/MixedModels/MixedModels.html">Hierarchische Modelle</a> <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/Analysing/Analysing_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1200</td>
@@ -1109,13 +1109,13 @@
                   </tr>
                   <tr>
                     <td class="time">1300</td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsI/LinearModelsI.html">Linear models I</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsI/LinearModelsI_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/RobustStats/RobustStats.html">Robust statistics</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/RobustStats/RobustStats_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsI/LinearModelsI.html">Lineare Modelle I</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsI/LinearModelsI_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/RobustStats/RobustStats.html">Robuste Statistik</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/RobustStats/RobustStats_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1530</td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsII/LinearModelsII.html">Linear models II</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsII/LinearModelsII_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/NewStats/NewStats.html">New statistics</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/NewStats/NewStats_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsII/LinearModelsII.html">Lineare Modelle II</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/LinearModelsII/LinearModelsII_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/NewStats/NewStats.html">Neue Statistik</a> <a href="https://therbootcamp.github.io/SwR_2019Apr/_sessions/NewStats/NewStats_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1745</td>
@@ -1213,7 +1213,7 @@
                 <p class="head">Voraussetzungen</p>
                 <p class="text-muted entry">Der Kurs findet an beiden Kurstagen von 9:00 bis 18:00 Uhr statt. An beiden Tagen dienen Kurzvorträge und Beispiele zur Einführung in die einzelnen Themen. Der Großteil der Zeit wird anschliessend praktischen Übungen gewidmet, die Ihnen "learning by doing" ermöglichen sollen. Mit mindestens 2 Anleitern vor Ort wird es ausreichend Zeit für eine 1:1 Betreuung während der Übungen geben. Alle Kursmaterialien, Tutorials, Beispiele, Übungen und Lösungen stehen Ihnen während und nach dem Kurs jederzeit online zur Verfügung. Sie finden unsere Materialien zu vergangenen Kursen unter <a href="https://therbootcamp.github.io/#materials">offene Materialien erkunden</a>. </p>
 
-                <p class="head">Programm & Materialien <font style="font-size:10px">(May, 2019)</font></p>
+                <p class="head">Programm & Materialien <font style="font-size:12px"> (Oct, 2019, Änderungen vorbehalten)</font></p>
                 <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
                   <tr>
                     <th></th>
@@ -1222,13 +1222,13 @@
                   </tr>
                   <tr>
                     <td class="time">0900</td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Welcome/Welcome.html">Willkommen</a></td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Recap/Recap.html">Rückblick</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Welcome/Welcome.html">Willkommen</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Recap/Recap.html">Rückblick</a></td>
                   </tr>
                   <tr>
                     <td class="time">0930</td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/WhatIsML/WhatIsML.html">What is ML?</a> &<br><a href="https://therbootcamp.github.io/ML_2019May/_sessions/RforML/RforML.html">R for ML</a></td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Optimization/Optimization.html">Analysing</a> <a href="https://therbootcamp.github.io/ML_2019May/_sessions/Optimization/Optimization_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/WhatIsML/WhatIsML.html">Was ist ML?</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Optimization/Optimization.html">Optimisierung</a> <a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Optimization/Optimization_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1200</td>
@@ -1237,13 +1237,13 @@
                   </tr>
                   <tr>
                     <td class="time">1300</td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Fitting/Fitting.html">Fitting</a> <a href="https://therbootcamp.github.io/ML_2019May/_sessions/Fitting/Fitting_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Features/Features.html">Features</a> <a href="https://therbootcamp.github.io/ML_2019May/_sessions/Features/Features_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Fitting/Fitting.html">Fitting</a> <a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Fitting/Fitting_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Features/Features.html">Features</a> <a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Features/Features_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1530</td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Prediction/Prediction.html">Prediction</a> <a href="https://therbootcamp.github.io/ML_2019May/_sessions/Prediction/Prediction_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/ML_2019May/_sessions/Models/Models.html">Case studies</a> <a href="https://therbootcamp.github.io/ML_2019May/_sessions/Models/Models_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Prediction/Prediction.html">Vorhersage</a> <a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Prediction/Prediction_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Models/Models.html">Ausblick</a> <a href="https://therbootcamp.github.io/ML_2019Oct/_sessions/Models/Models_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1745</td>
@@ -1614,6 +1614,7 @@
                 <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Learn to build predictive algorithms with R</p>
 
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">October 2019 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2-day</a><br>
 
