--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                 </table>
                 <p class="head">Aufbau</p>
                 <p class="text-muted entry">Der Kurs findet von 13:00 bis 18:00 Uhr statt und besteht aus einer Mischung aus Kurzvorträgen und interaktiven Elementen, in denen Sie die praktische Anwendung üben können. Alle Kursmaterialien, Beispiele, Übungen und Lösungen stehen Ihnen während und nach dem Kurs jederzeit online zur Verfügung.</p>
-                <p class="head">Programm & Materialien <font style="font-size:10px">(Feb, 2019)</font></p>
+                <p class="head">Programm & Materialien <font style="font-size:12px"> (Änderungen vorbehalten)</font></p>
                 <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
                   <tr>
                     <th></th>
