--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                   </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
-                    <td>Zweitageskurs: Fr-Sa, 9.00-18.00 Uhr</td>
+                    <td>Eintagskurs: Fr, 13.00-18.00 Uhr</td>
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
@@ -944,7 +944,7 @@
                   </tr>
                   <tr>
                     <td class="elem">Zeiten</td>
-                    <td>Eintageskurs: Fr, 13.00-18.00 Uhr</td>
+                    <td>Zweitageskurs: Fr-Sa, 09.00-18.00 Uhr</td>
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
