--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Maschinelles Learnen mit R</h4>
+                  <h4>Maschinelles Lernen mit R</h4>
                   <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 <div class="timeline-body">
                   <a class="course-link" data-toggle="modal" href="#MLwR">
