--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
                 </a>
                 <div class="timeline-dates">
                   <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' voranmelden.">DE | Nov 29 | Voranmelden</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' am 29. November voranmelden.">DE | Nov 29 | Voranmelden</a><br>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>
                 </div>
               </div>
             </li>
@@ -812,7 +813,8 @@
                 <h4  style="padding:0px;margin:0px">Einfürung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science von Grund auf</p>
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Anmelden</a><br>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' voranmelden.">DE | Nov 29 | Voranmelden</a>
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' am 29. November voranmelden.">DE | Nov 29 | Voranmelden</a><br>
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einfürung in die moderne Datenanalyse mit R&amp;body=I möchte mich für das nächste R Bootcamp 'Einfürung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>
                 <br><br>
                 <p class="head">Beschreibung</p>
                 <p class="text-muted entry">Daten sind das Gold des 21. Jahrhunderts. Wer Zugang zu Daten hat und sie zu nutzen weiss, kann beispielsweise den wissenschaftlichen und technologischen Fortschritt im Gesundheitswesen vorantreiben oder sich durch intelligentes Marketing kritische Wettbewerbsvorteile sichern. Egal welches Ziel das Ihre ist, ob Sie im Management oder in der Entwicklung arbeiten, Expertise im Bereich der modernen Datenanalyse wird zunehmend zum entscheidenden Faktor. Dieser Nachmittagskurs ermöglicht Ihnen den Einstieg in die Welt von Data Science und Big Data mittels der offenen Programmiersprache R, welche speziell für den Zweck der Datenanalyse entwickelt wurde und neben Python zu den gefragtesten Tools in diesem Bereich zählt. Sie lernen die Grundlagen der Sprache und werden in interaktiven Elementen an die eigenständige Umsetzung herangeführt. Abschliessend erfahren Sie wie Sie ihre Reise in die Welt der modernen Datenanalyse fortsetzen können.</p>
