--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Die Grundlage robuster, entscheidungsrelevanter Erkenntnisse ist die Statistik. Lernen Sie die Grundlagen und Anwendung in derjenigen Programmiersprache, die genau für diesen Zweck entwickelt wurde - R.</p>
+                  <p class="text-muted">Die Grundlage robuster, entscheidungsrelevanter Erkenntnisse ist die Statistik. Lernen Sie Grundlagen und Anwendung in derjenigen Programmiersprache, die genau für diesen Zweck entwickelt wurde - R.</p>
                   </a>
                 </div>
                 <div class="timeline-dates">
@@ -1058,7 +1058,7 @@
                 <p class="text-muted entry">Um robuste, entscheidungsrelevante Erkenntnisse aus Daten ziehen zu können, benötigen Sie Statistik. In diesem intensiven Kurs lernen Sie die Grundprinzipien der statistischen Datenanalyse mit R kennen, der Programmiersprache für Data Analytics und Statistik. Nach einer Einführung in die theoretischen Grundlagen lernen Sie, wie Sie Daten durch beschreibende Statistiken zusammen fassen können. Anschliessend lernen Sie, Regressionsmodelle zu implementieren und zu verstehen (z.B., Regression und ANOVA), um versteckte Zusammenhänge in Ihren Daten ersichtlich zu machen und auf ihre Robustheit zu prüfen. Sie erhalten darüber hinaus Einblick in neuere Methoden wie hierarchische Regression, Bayesianische Statistik und robuste Analyseverfahren.</p>
 
                 <p class="head">Voraussetzungen</p>
-                <p class="text-muted entry">Teilnehmende dieses Kurses sollten über Grundkenntnisse in der Programmiersprache R verfügen. Für Interessierte ohne oder mit geringer Erfahrung in R empfehlen wir den Nachmittagskurs “Einführung in die moderne Datenanalyse mit R” zu besuchen. Wenn Sie nicht sicher sind, ob Sie über genügend Grundkenntnisse verfügen setzen Sie sich entweder direkt mit uns in Verbindung oder nehmen Sie zunächst am diesem <a href="http://bit.ly/weissichgenug%C3%BCberR"><b>QUIZ</b></a> teil. Teilnehmende sind gebeten, einen eigenen Laptop mit Software-Installationsrechten mitzubringen. Neben Grundkenntnissen in R, sind Grundkenntnisse in Statistik hilfreich, aber nicht zwingend nötig.</p>
+                <p class="text-muted entry">Teilnehmende dieses Kurses sollten über Grundkenntnisse in der Programmiersprache R verfügen. Für Interessierte ohne oder mit geringer Erfahrung in R empfehlen wir den Nachmittagskurs <i>Einführung in die moderne Datenanalyse mit R</i> zu besuchen. Wenn Sie nicht sicher sind, ob Sie über genügend Grundkenntnisse verfügen setzen Sie sich entweder direkt mit uns in Verbindung oder nehmen Sie zunächst am diesem <a href="http://bit.ly/weissichgenug%C3%BCberR"><b>QUIZ</b></a> teil. Teilnehmende sind gebeten, einen eigenen Laptop mit Software-Installationsrechten mitzubringen. Neben Grundkenntnissen in R, sind Grundkenntnisse in Statistik hilfreich, aber nicht zwingend nötig.</p>
 
                 <p class="head">Details</p>
                 <table class="text-muted entry" cellspacing="0" cellpadding="0">
