--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Die Grundlage robuster, entscheidungsrelevanter Erkenntnisse ist die Statistik. Lernen Sie Grundlagen und Anwendung in derjenigen Programmiersprache, die genau für diesen Zweck entwickelt wurde - R.</p>
+                  <p class="text-muted">Die Grundlage robuster, entscheidungsrelevanter Erkenntnisse ist die Statistik. Lernen Sie Grundlagen und Anwendung in derjenigen Programmiersprache kennen, die genau für diesen Zweck entwickelt wurde - R.</p>
                   </a>
                 </div>
                 <div class="timeline-dates">
