--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 29. November voranmelden.">DE | Nov 29 | Voranmelden</a><br>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Nov 29 | Anmelden</a><br>
+                  <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 29. November voranmelden.">DE | Nov 29 | Voranmelden</a><br>--->
                   <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>
                 </div>
               </div>
@@ -223,8 +223,8 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>
+                  <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>--->
                 </div>
               </div>
             </li>
@@ -250,8 +250,8 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 13/14 | Voranmelden</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">DE | Mär 13/14 | Anmelden</a>
+                  <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 13/14 | Voranmelden</a>--->
                 </div>
               </div>
             </li>
@@ -276,7 +276,8 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung">DE | Apr 3/4 | Anmelden</a>
+                  <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>--->
                 </div>
               </div>
             </li>
@@ -813,7 +814,7 @@
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science von Grund auf</p>
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Anmelden</a><br>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 29. November voranmelden.">DE | Nov 29 | Voranmelden</a><br>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Nov 29 | Anmelden</a><br>
                 <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>
                 <br><br>
                 <p class="head">Beschreibung</p>
@@ -931,8 +932,8 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science mit R von Grund auf</p>
-                <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Anmelden</a>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>
+                <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>--->
                 <br><br>
                 <p class="head">Beschreibung</p>
                 <p class="text-muted entry">Jedes datengestützte Projekt beginnt mit der Datenaufbereitung und -exploration. Von diesem ebenso aufwendigen wie bedeutendem Projektabschnitt hängt alles Folgende ab. Er umfasst das Bereinigen und Verknüpfen von Datensätzen aus verschiedenen Quellen und die Visualisierung der darin enthaltenen Zusammenhänge. Kaum ein Werkzeug eignet sich für diese Aufgaben so gut wie die Programmiersprache R. An diesem vollgepackten Wochenende lernen Sie, wie Sie alle Elemente der Datenaufbereitung und -exploration mit R durchführen können. Sie lernen, wie Sie Daten von der Festplatte oder aus dem Internet laden, wie sie Daten bereinigen und organisieren, wie sie einfache deskriptive Analysen durchführen und, nicht zuletzt, wie Sie ästhetisch ansprechende, publikationsreife Visualisierungen erstellen.</p>
@@ -1049,8 +1050,8 @@
                 <h4  style="padding:0px;margin:0px">Statistik mit R</h4>
                 <p class="item-intro text-muted">Treffen Sie datenbasierte Entscheidungen mit R</p>
 
-                <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Anmelden</a>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 13/14 | Voranmelden</a>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">DE | Mär 13/14 | Anmelden</a>
+                <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 13/14 | Voranmelden</a>--->
 
                 <br><br>
 
@@ -1177,8 +1178,8 @@
                 <h4  style="padding:0px;margin:0px">Maschinelles Lernen mit R</h4>
                 <p class="item-intro text-muted">Lernen Sie prädiktive Algorithmen mit R zu erstellen.</p>
 
-                <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Anmelden</a>--->
-                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung">DE | Apr 3/4 | Anmelden</a>
+                <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>--->
 
                 <br><br>
 
