--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">We Teach R</h2>
           <!---<h3 class="section-subheading text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</h3>--->
-          <p class="text-muted">Wir sind Data Scientists, die zusammengenommen über 25 Jahre Erfahrung R und Data Science in der Wissenschaft und in der Industrie gesammelt haben. Unser Ziel ist es, Ihnen die nötigen Fähigkeiten beizubringen, damit Sie neue Erkenntnisse aus Daten gewinnen und kommunizieren zu können.</p><br><br>
+          <p class="text-muted">Wir sind Data Scientists, die zusammengenommen über 25 Jahre Erfahrung R und Data Science in der Wissenschaft und in der Industrie gesammelt haben. Unser Ziel ist es, Ihnen die nötigen Fähigkeiten beizubringen, damit Sie neue Erkenntnisse aus Daten gewinnen und kommunizieren können.</p><br><br>
         </div>
       </div>
       <div class="row text-center">
