--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Lerne Data Science mit R</div>
-        <!---<div class="intro-heading text-uppercase">The R Bootcamp</div>--->
-        <div class="intro-heading text-uppercase" style='margin-bottom:0px;'>The R Bootcamp<br><a href="https://therbootcamp.github.io/I2R_2019Nov/"><font style="font-size:40%;line-height:50px;color:#EA4B68;vertical-align: text-top;text-transform: lowercase;">...running...</font></a></div>
+        <div class="intro-heading text-uppercase">The R Bootcamp</div>
+        <!---<div class="intro-heading text-uppercase" style='margin-bottom:0px;'>The R Bootcamp<br><a href="https://therbootcamp.github.io/I2R_2019Nov/"><font style="font-size:40%;line-height:50px;color:#EA4B68;vertical-align: text-top;text-transform: lowercase;">...running...</font></a></div>--->
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mehr erfahren</a>
       </div>
     </div>
@@ -194,7 +194,7 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Nov 29 | Anmelden</a><br>
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Nov 29 | Anmelden</a><br>--->
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 29. November voranmelden.">DE | Nov 29 | Voranmelden</a><br>--->
                   <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>
                 </div>
@@ -863,27 +863,27 @@
                   </tr>
                   <tr>
                     <td class="time">1400</td>
-                    <td>Was ist R?</td>
+                    <td>R(Studio)</td>
                   </tr>
                   <tr>
                     <td class="time">1430</td>
-                    <td>Was sind Objekte?</td>
+                    <td>Assignments</td>
                   </tr>
                   <tr>
                     <td class="time">1515</td>
-                    <td>Was sind Funktionen?</td>
+                    <td>Funktionen</td>
                   </tr>
                   <tr>
                     <td class="time">1545</td>
-                    <td>Wie speicher ich Daten?</td>
+                    <td>Daten I/O</td>
                   </tr>
                   <tr>
                     <td class="time">1615</td>
-                    <td>Wie analysiere ich Daten?</td>
+                    <td>Datenanalyse</td>
                   </tr>
                   <tr>
                     <td class="time">1645</td>
-                    <td>Was R sonst noch kann?</td>
+                    <td>Nächste Schritte</td>
                   </tr>
                   <tr>
                     <td class="time">1745</td>
@@ -1596,6 +1596,14 @@
                 <h2 class="text-uppercase">Offene Materialien</h2>
                 <p class="item-intro text-muted"> Im Sinne von R's offener Philosophie sind die Materialien unserer Kurse öffentlich zugänglich. Entdecken Sie unten die Materialien unserer vergangenen Kurse.</p>
                 <br>
+
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/4.png" alt="">
+                <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalytic mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">February 2019 | 2-day</a><br>
+
+                <br><br><br>
+
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">R for Data Science</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px"> Learn Data Science with R from the ground up</p>
